<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_bookmarks_24"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_scan_receipt"
            android:icon="@drawable/baseline_document_scanner_24"
            android:title="@string/menu_scan_receipt" />

        <item
            android:id="@+id/nav_receive"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/menu_receive" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>