<resources>
    <string name="app_name">Receipt\'As</string>
    <string name="title_activity">Receipt\'As</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="request_permission_title">Permission request</string>
    <string name="request_permission_message">The application need the following permissions :\n - Read external file\n - Access camera</string>
    <string name="request_permission_button_neutral">Quit</string>
    <string name="request_permission_button_accept">Accept</string>


    <string name="menu_history">History</string>

    <string name="sort_receipt_alphabetical">Alphabetical (A - Z)</string>
    <string name="sort_receipt_alphabetical_reversed">Alphabetical (Z - A)</string>
    <string name="sort_receipt_date_recent_first">Date (Recent first)</string>
    <string name="sort_receipt_date_older_first">Date (Older first)</string>
    <string name="sort_receipt_price_ascending">Price (Ascending)</string>
    <string name="sort_receipt_price_descending">Price (Descending)</string>

    <string name="receipt_detail_deletion_message">Do you really want to delete this receipt ?</string>
    <string name="receipt_detail_deletion_button_neutral">No</string>
    <string name="receipt_detail_deletion_button_positive">Yes</string>


    <string name="menu_scan_receipt">Scan receipt</string>
    <string name="scan_receipt_process_image_product_name">Select products name</string>
    <string name="scan_receipt_process_image_product_price">Select products price</string>
    <string name="scan_receipt_remove_image_title">Delete image</string>
    <string name="scan_receipt_remove_image_message">Do you really want to delete this image ?</string>
    <string name="scan_receipt_remove_image_cancel">Cancel</string>
    <string name="scan_receipt_remove_image_accept">Delete</string>
    <string name="scan_receipt_missing_info_title">Some infos are missing</string>
    <string name="scan_receipt_missing_info_description">Some required infos are missing (title, prices) or no images have been selected</string>

    <string name="scan_receipt_title">Receipt title</string>
    <string name="scan_receipt_price">Receipt price</string>

    <string name="scan_receipt_correction_label">Correction</string>

    <string name="scan_receipt_participant_label">Participants</string>
    <string name="name_input">Name</string>
    <string name="adding_button_description">Add</string>
    <string name="adding_participant_dialog_no_participant_title">No participant</string>
    <string name="adding_participant_dialog_no_participant_message">Please add at least one participant</string>

    <string name="scan_receipt_division_label">Division</string>

    <string name="scan_receipt_finalization_label">Finalization</string>


    <string name="menu_receive">Receive receipt</string>

    <string name="send_receipt_title">Send receipt</string>
    <string name="bluetooth_state_off">The Bluetooth is DISABLED, \n Please activate it to send receipt.</string>
    <string name="bluetooth_state_on">The Bluetooth is ACTIVATED</string>
    <string name="bluetooth_state_unavailable">The Bluetooth is UNAVAILABLE.</string>
    <string name="bluetooth_button_activate">Activate Bluetooth</string>
    <string name="bluetooth_information_wait_reception">Waiting for reception...</string>
    <string name="bluetooth_information_reception_progress"> Reception in progress... </string>
    <string name="bluetooth_information_reception">Receipt added : </string>
    <string name="bluetooth_information_reception_error">Reception error. Please try again.</string>
    <string name="bluetooth_dialog_title">Choose a device :</string>
    <string name="bluetooth_button_select">Select</string>
    <string name="bluetooth_button_send">Send receipt</string>
    <string name="bluetooth_information_sending_init">Select a destination device to sending.</string>
    <string name="bluetooth_information_sending"> Sending ...</string>
    <string name="bluetooth_information_device_init">Device name</string>
    <string name="bluetooth_information_sending_error">Sending error. Please try again.</string>
    <string name="bluetooth_information_device_error">Device unavailable. Try again or select an other device.</string>
    <string name="bluetooth_information_sending_success">Receipt sent successfully.</string>


    <string name="menu_settings">Settings</string>
    <string name="settings_category_general">General settings</string>

    <string name="settings_favorite_currency">settings_favorite_currency</string>
    <string name="settings_favorite_currency_default">None</string>
    <string name="settings_favorite_currency_title">Default currency</string>
    <string name="settings_favorite_currency_summary">Choose the default currency for new receipts</string>

    <string name="settings_favorite_theme">settings_favorite_theme</string>
    <string name="settings_favorite_theme_default">@string/settings_theme_system</string>
    <string name="settings_favorite_theme_title">Theme</string>
    <string name="settings_favorite_theme_summary">Choose a theme for the application</string>

    <string name="settings_theme_system">System default</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>


    <string name="settings_favorite_language_default">English</string>
    <string name="settings_favorite_language">settings_favorite_language</string>
    <string name="settings_favorite_language_title">Language</string>
    <string name="settings_favorite_language_summary">Choose the language used in the application</string>
    <string-array name="settings_languages">
        <item name="settings_language_en">English</item>
        <item name="settings_language_fr">Français</item>
    </string-array>

    <string name="settings_category_about">About</string>
    <string name="settings_version">settings_version</string>
    <string name="settings_version_title">Version</string>


    <string name="item_text_placeholder">Item</string>

    <string name="receipt_name_placeholder">Receipt name</string>
    <string-array name="receipt_detail_tabs_names">
        <item>Products list</item>
        <item>Summary</item>
    </string-array>
    <string name="receipt_total">Total price : %1$.2f %2$.3S</string>
    <string name="receipt_remaining">Remaining : %1$.2f %2$.3S</string>
    <string name="participant_total">%1$.2f %2$.3S</string>
    <string name="payer_name">%1$s (payer)</string>
    <string name="unassigned_total">Total unassigned objects: %1$.2f %2$.3S</string>

    <string name="information_message_adding_participants">Enter the names of different participants. \n (8 participants max)</string>
    <string name="information_message_item_correction">Select the lines to delete/undelete or use option menu to combine/detach</string>
    <string name="information_message_advanced_correction">Select a line to modify its values : label and price</string>
    <string name="information_message_division_participant">, select your items.</string>
    <string name="information_message_choose_payer">Select the person who paid.</string>
    <string name="foo">element</string>

    <string name="menu_correction">Correction</string>
    <string-array name="receipt_correction_tabs_names">
        <item>Item correction</item>
        <item>Advanced correction</item>
    </string-array>
    <string name="error_parsing_items">Error while parsing items</string>
    <string name="error_parsing_prices">Error while parsing prices</string>
    <string name="item_correction_popup_menu_delete">Delete</string>
    <string name="item_correction_popup_menu_undelete">Undelete</string>
    <string name="item_correction_popup_menu_combine_above">Combine above</string>
    <string name="item_correction_popup_menu_combine_below">Combine below</string>
    <string name="item_correction_popup_menu_detach_first">Detach first item</string>
    <string name="item_correction_popup_menu_detach_last">Detach last item</string>
    <string name="item_placeholder">item</string>
    <string name="price_placeholder">0.0</string>
    <string name="correction_modal_title">Advanced item correction</string>
    <string name="correction_modal_item_label">Item label</string>
    <string name="correction_modal_item_price">Item price</string>

    <string name="receipt_correction_save_error">Prices parsing error</string>
    <string name="receipt_correction_save_error_help">Prices written in red must be corrected before going further</string>
    <string name="item_correction_dialog_validate_title">Validate current receipt ?</string>
    <string name="item_correction_dialog_validate">Validate</string>
    <string name="dialog_positive">Gotcha !</string>
    <string name="dialog_negative">Cancel</string>
    <string name="receipt_correction_dialog_total_caution">CAUTION !! - RECEIPT CALCULATED TOTAL DOES NOT MATCH SPECIFIED TOTAL IN FORMER SCREEN\n\n</string>

    <string name="scan_receipt_missing_payer_title">Payer is missing</string>
    <string name="scan_receipt_missing_payer_description">No payer has been specified. Please select one.</string>
</resources>